--- a/templates/index.html
+++ b/templates/index.html
@@ -114,8 +114,9 @@
                         
                         <div class="search-buttons" id="searchButtons">
                             <select class="search-method-select" id="searchMethodSelect">
-                                <option value="dtw" selected>DTW</option>
-                                <option value="tfidf">TF-IDF</option>
+                                <option value="hybrid" selected>Hybrid (DTW+TF-IDF)</option>
+                                <option value="dtw">DTW Only</option>
+                                <option value="tfidf">TF-IDF Only</option>
                             </select>
                             <button class="search-btn" id="searchSequenceBtn">🔍 Search Similar Sequence</button>
                         </div>
